Fix form submission, add auto-refresh after submitting